Redid license, command line opts, and added config
- Redid the license option for the command line options so it's easier to add licenses to the list.
- Added a --config option with the subsequent addition of the ini config parser.
- Actually added exceptions and started using them in some spots.
- Fix CMake warning.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ SET(PROJECT_PATCH_LEVEL 0)
 # Cmake module path (if exists)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 # include our function checks
-include(systemfuncs)
+#include(systemfuncs)
 
 # Get the git revision location for the branch we're on
 if(EXISTS "${CMAKE_SOURCE_DIR}/.git/HEAD")
